--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "file-loader": "^6.2.0",
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
+    "next-video": "^2.2.0",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
