--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@arcjet/next": "^1.0.0-beta.5",
     "@clerk/nextjs": "^6.12.4",
+    "@designbycode/tailwindcss-text-stroke": "^1.3.0",
     "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.5.0",
@@ -52,6 +53,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
     "react-email": "4.0.3",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4.1.3"
   }
 }
